fix text alignment and spacing on about me page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -357,7 +357,8 @@ hr {
 }
 
 .bio {
-  margin-left: 40px;
+  margin: 0 65px 0 55px;
+  text-align: justify;
 }
 
 .bio-title {
